# ogre

./: Cargo.toml  README.md
program/ore-prog/oreprog/: Anchor.toml
program/ore-prog/oreprog/programs/oreprog/: Cargo.toml
program/ore-prog/oreprog/programs/oreprog/src/: constants.rs  error.rs  lib.rs
program/ore-prog/oreprog/programs/oreprog/src/instructions/: claim.rs  mine.rs  mod.rs  register.rs
program/ore-prog/oreprog/tests/: oreprog.ts
program/ore-prog/oreprog/tests/utils/: index.ts
src/: config.rs  main.rs  miner.rs  ogre.rs  ogrethread.rs  stats.rs  submitterv2.rs  utils.rs
