[package]
name = "ogre"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ogre"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
mimalloc = { version = "*", default-features = false }
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.46.1"
chrono = "0.4.34"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
log = "0.4"
ore = { version = "1.2.0", package = "ore-program" }
#rand = "0.8.4"
solana-cli-config = "1.18.5"
solana-client = "^1.16"
solana-program = "^1.16"
solana-sdk = "^1.16"
solana-transaction-status = "^1.16"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
tokio = "1.35.1"
crossbeam-channel = "0.5"
glob = "0.3.1"
rand = "0.9.0-alpha.1"          # Random number generators and other randomness functionality. 
bytemuck = "1.15.0"                 # A crate for mucking around with piles of bytes.
colored = "2"
comfy-table = "7.1.1"                 # An easy to use library for building beautiful tables with automatic content wrapping
reqwest = { version = "0.12.3", features = [ "json" ] }
serde = "1.0.197"                              # A generic serialization/deserialization framework
oreprog = { path = "./program/ore-prog/oreprog/programs/oreprog", features = [ "no-entrypoint" ] }
sha3 = "0.10.4"
#clap = { version = "4.4.12", features = ["derive"] }

